# SecureSocket

./: CMakeLists.txt  client.c  readme.md  server.c
result/: client-out.txt  server-out.txt
